# surjective

./: .travis.yml  CHANGELOG.md  README.md  stack.yaml  surjective.cabal
src/: Surjective.hs
test/: doctests.hs
