name:                surjective
version:             0.1.0.0
synopsis:            Check that your parsers cover all the cases.
homepage:            https://github.com/gelisam/surjective
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Surjective
  build-depends:       base
                     , lens
                     , mtl
                     , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
