name:                surjective
version:             0.1.0.0
synopsis:            An output coverage checker
description:         Check that your parsers cover all the cases.
homepage:            https://github.com/gelisam/surjective
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Surjective
  build-depends:       base >= 4.7
                     , lens >= 4.15
                     , mtl >= 2.2
                     , template-haskell >= 2.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
